--- a/index.html
+++ b/index.html
@@ -5,6 +5,104 @@
   <title>캐릭터 갤러리</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
+/* 기본 스타일 초기화 */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background: #f2f2f2;
+  padding: 20px;
+  text-align: center;
+}
+
+/* 프로필 갤러리 영역 */
+.profile-gallery h1 {
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.profiles {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.profiles img {
+  width: 150px;
+  height: auto;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.3s;
+  border: 3px solid #fff;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
+
+.profiles img:hover {
+  transform: scale(1.1);
+}
+
+/* 모달 기본 스타일 */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.8);
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+/* 모달 내용 영역 */
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  width: 90%;
+  max-width: 800px;
+  max-height: 90%;
+  overflow-y: auto;
+  position: relative;
+  border-radius: 5px;
+}
+
+/* 닫기 버튼 스타일 */
+.close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
+  font-size: 30px;
+  color: #333;
+}
+
+/* 갤러리 내부 이미지 배치 */
+.gallery {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
+
+.gallery img {
+  width: calc(33.333% - 10px);
+  height: auto;
+  border: 2px solid #eee;
+  border-radius: 3px;
+  transition: transform 0.3s;
+}
+
+.gallery img:hover {
+  transform: scale(1.05);
+}
 <body>
   <!-- 캐릭터 프로필 영역 -->
   <div class="profile-gallery">
