--- a/index.html
+++ b/index.html
@@ -3,216 +3,200 @@
 <head>
   <meta charset="UTF-8">
   <title>캐릭터 갤러리</title>
+  <style>
+    /* 기본 스타일 초기화 */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      padding: 20px;
+      text-align: center;
+    }
+    /* 프로필 영역 */
+    .profile-gallery {
+      margin-bottom: 20px;
+    }
+    .profiles {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    .profiles img {
+      width: 150px;
+      height: auto;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: transform 0.3s;
+      border: 3px solid #fff;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    .profiles img:hover {
+      transform: scale(1.1);
+    }
+    /* 갤러리 영역 (프로필 클릭 시 펼쳐짐) */
+    .gallery-container {
+      display: none;
+      margin: 20px auto;
+      max-width: 90%;
+      text-align: left;
+    }
+    .gallery-container h2 {
+      margin-bottom: 10px;
+      color: #333;
+    }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: flex-start;
+    }
+    .gallery img {
+      max-width: 100%;
+      height: auto;
+      cursor: pointer;
+      border: 2px solid #eee;
+      border-radius: 3px;
+      transition: transform 0.3s;
+    }
+    .gallery img:hover {
+      transform: scale(1.05);
+    }
+    /* 이미지 모달 */
+    .image-modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.8);
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      z-index: 100;
+    }
+    .image-modal img {
+      max-width: 90%;
+      max-height: 90%;
+      border: 5px solid #fff;
+      border-radius: 5px;
+    }
+    .image-modal .close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 30px;
+      color: #fff;
+      cursor: pointer;
+    }
+  </style>
 </head>
-<style>
-  /* 기본 스타일 초기화 */
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-    background: #f2f2f2;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  /* 프로필 갤러리 영역 */
-  .profile-gallery h1 {
-    margin-bottom: 20px;
-    color: #333;
-  }
-  
-  .profiles {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-  }
-  
-  .profiles img {
-    width: 150px;
-    height: auto;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: transform 0.3s;
-    border: 3px solid #fff;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  }
-  
-  .profiles img:hover {
-    transform: scale(1.1);
-  }
-  
-  /* 모달 기본 스타일 */
-  .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.8);
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-  }
-  
-  /* 모달 내용 영역 */
-  .modal-content {
-    background: #fff;
-    padding: 20px;
-    width: 90%;
-    max-width: 800px;
-    max-height: 90%;
-    overflow-y: auto;
-    position: relative;
-    border-radius: 5px;
-  }
-  
-  /* 닫기 버튼 스타일 */
-  .close {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    cursor: pointer;
-    font-size: 30px;
-    color: #333;
-  }
-  
-  /* 갤러리 내부 이미지 배치 */
-  .gallery {
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-  }
-  
-  .gallery img {
-    width: calc(33.333% - 10px);
-    height: auto;
-    border: 2px solid #eee;
-    border-radius: 3px;
-    transition: transform 0.3s;
-  }
-  
-  .gallery img:hover {
-    transform: scale(1.05);
-  }
-</style>
 <body>
   <!-- 캐릭터 프로필 영역 -->
   <div class="profile-gallery">
     <h1>캐릭터 선택</h1>
     <div class="profiles">
-      <img src="char1_profile.jpg" alt="캐릭터 1" data-modal="char1-modal">
-      <img src="char2_profile.jpg" alt="캐릭터 2" data-modal="char2-modal">
-      <img src="char3_profile.jpg" alt="캐릭터 3" data-modal="char3-modal">
-      <img src="char4_profile.jpg" alt="캐릭터 4" data-modal="char4-modal">
-      <img src="char5_profile.jpg" alt="캐릭터 5" data-modal="char5-modal">
+      <img src="char1_profile.jpg" alt="캐릭터 1" data-gallery="gallery-char1">
+      <img src="char2_profile.jpg" alt="캐릭터 2" data-gallery="gallery-char2">
+      <img src="char3_profile.jpg" alt="캐릭터 3" data-gallery="gallery-char3">
+      <img src="char4_profile.jpg" alt="캐릭터 4" data-gallery="gallery-char4">
+      <img src="char5_profile.jpg" alt="캐릭터 5" data-gallery="gallery-char5">
+    </div>
+  </div>
+  
+  <!-- 각 캐릭터 갤러리 (초기에는 숨김) -->
+  <div id="gallery-char1" class="gallery-container">
+    <h2>캐릭터 1 갤러리</h2>
+    <div class="gallery">
+      <img src="char1_img1.jpg" alt="캐릭터 1 이미지 1">
+      <img src="char1_img2.jpg" alt="캐릭터 1 이미지 2">
+      <img src="char1_img3.jpg" alt="캐릭터 1 이미지 3">
+    </div>
+  </div>
+  <div id="gallery-char2" class="gallery-container">
+    <h2>캐릭터 2 갤러리</h2>
+    <div class="gallery">
+      <img src="char2_img1.jpg" alt="캐릭터 2 이미지 1">
+      <img src="char2_img2.jpg" alt="캐릭터 2 이미지 2">
+      <img src="char2_img3.jpg" alt="캐릭터 2 이미지 3">
+    </div>
+  </div>
+  <div id="gallery-char3" class="gallery-container">
+    <h2>캐릭터 3 갤러리</h2>
+    <div class="gallery">
+      <img src="char3_img1.jpg" alt="캐릭터 3 이미지 1">
+      <img src="char3_img2.jpg" alt="캐릭터 3 이미지 2">
+      <img src="char3_img3.jpg" alt="캐릭터 3 이미지 3">
+    </div>
+  </div>
+  <div id="gallery-char4" class="gallery-container">
+    <h2>캐릭터 4 갤러리</h2>
+    <div class="gallery">
+      <img src="char4_img1.jpg" alt="캐릭터 4 이미지 1">
+      <img src="char4_img2.jpg" alt="캐릭터 4 이미지 2">
+      <img src="char4_img3.jpg" alt="캐릭터 4 이미지 3">
+    </div>
+  </div>
+  <div id="gallery-char5" class="gallery-container">
+    <h2>캐릭터 5 갤러리</h2>
+    <div class="gallery">
+      <img src="char5_img1.jpg" alt="캐릭터 5 이미지 1">
+      <img src="char5_img2.jpg" alt="캐릭터 5 이미지 2">
+      <img src="char5_img3.jpg" alt="캐릭터 5 이미지 3">
     </div>
   </div>
 
-  <!-- 캐릭터 1 갤러리 모달 -->
-  <div id="char1-modal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>캐릭터 1 갤러리</h2>
-      <div class="gallery">
-        <img src="char1_img1.jpg" alt="캐릭터 1 이미지 1">
-        <img src="char1_img2.jpg" alt="캐릭터 1 이미지 2">
-        <img src="char1_img3.jpg" alt="캐릭터 1 이미지 3">
-      </div>
-    </div>
+  <!-- 원본 이미지 모달 -->
+  <div class="image-modal" id="image-modal">
+    <span class="close">&times;</span>
+    <img src="" alt="원본 이미지">
   </div>
 
-  <!-- 캐릭터 2 갤러리 모달 -->
-  <div id="char2-modal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>캐릭터 2 갤러리</h2>
-      <div class="gallery">
-        <img src="char2_img1.jpg" alt="캐릭터 2 이미지 1">
-        <img src="char2_img2.jpg" alt="캐릭터 2 이미지 2">
-        <img src="char2_img3.jpg" alt="캐릭터 2 이미지 3">
-      </div>
-    </div>
-  </div>
-
-  <!-- 캐릭터 3 갤러리 모달 -->
-  <div id="char3-modal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>캐릭터 3 갤러리</h2>
-      <div class="gallery">
-        <img src="char3_img1.jpg" alt="캐릭터 3 이미지 1">
-        <img src="char3_img2.jpg" alt="캐릭터 3 이미지 2">
-        <img src="char3_img3.jpg" alt="캐릭터 3 이미지 3">
-      </div>
-    </div>
-  </div>
-
-  <!-- 캐릭터 4 갤러리 모달 -->
-  <div id="char4-modal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>캐릭터 4 갤러리</h2>
-      <div class="gallery">
-        <img src="char4_img1.jpg" alt="캐릭터 4 이미지 1">
-        <img src="char4_img2.jpg" alt="캐릭터 4 이미지 2">
-        <img src="char4_img3.jpg" alt="캐릭터 4 이미지 3">
-      </div>
-    </div>
-  </div>
-
-  <!-- 캐릭터 5 갤러리 모달 -->
-  <div id="char5-modal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>캐릭터 5 갤러리</h2>
-      <div class="gallery">
-        <img src="char5_img1.jpg" alt="캐릭터 5 이미지 1">
-        <img src="char5_img2.jpg" alt="캐릭터 5 이미지 2">
-        <img src="char5_img3.jpg" alt="캐릭터 5 이미지 3">
-      </div>
-    </div>
-  </div>
-
-  <!-- 자바스크립트 코드 (HTML 아래에 분리) -->
   <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      // 프로필 이미지 클릭 시 해당 모달 열기
-      const profiles = document.querySelectorAll(".profiles img");
-      profiles.forEach(function(profile) {
-        profile.addEventListener("click", function() {
-          const modalId = this.getAttribute("data-modal");
-          const modal = document.getElementById(modalId);
-          if (modal) {
-            modal.style.display = "flex";
+    // 프로필 클릭 시 해당 갤러리 토글
+    const profiles = document.querySelectorAll(".profiles img");
+    profiles.forEach(profile => {
+      profile.addEventListener("click", () => {
+        const galleryId = profile.getAttribute("data-gallery");
+        // 클릭한 프로필에 해당하는 갤러리 컨테이너
+        const targetGallery = document.getElementById(galleryId);
+        // 다른 갤러리는 닫기 (한 번에 하나만 펼치도록)
+        document.querySelectorAll(".gallery-container").forEach(gallery => {
+          if (gallery !== targetGallery) {
+            gallery.style.display = "none";
           }
         });
+        // 토글: 이미 열려있으면 닫고, 닫혀있으면 열기
+        if (targetGallery.style.display === "block") {
+          targetGallery.style.display = "none";
+        } else {
+          targetGallery.style.display = "block";
+        }
       });
+    });
 
-      // 모달 내 닫기 버튼 클릭 시 모달 닫기
-      const closeButtons = document.querySelectorAll(".modal .close");
-      closeButtons.forEach(function(btn) {
-        btn.addEventListener("click", function() {
-          this.closest(".modal").style.display = "none";
-        });
+    // 갤러리 이미지 클릭 시 모달 열기 (원본 이미지 표시)
+    const galleryImages = document.querySelectorAll(".gallery img");
+    const imageModal = document.getElementById("image-modal");
+    const modalImg = imageModal.querySelector("img");
+    galleryImages.forEach(img => {
+      img.addEventListener("click", (e) => {
+        e.stopPropagation(); // 갤러리 토글 이벤트 전파 방지
+        imageModal.style.display = "flex";
+        modalImg.src = img.src;
       });
+    });
 
-      // 모달 외부 영역 클릭 시 모달 닫기
-      const modals = document.querySelectorAll(".modal");
-      modals.forEach(function(modal) {
-        modal.addEventListener("click", function(e) {
-          if (e.target === modal) {
-            modal.style.display = "none";
-          }
-        });
-      });
+    // 모달 닫기 (닫기 버튼이나 모달 배경 클릭 시)
+    imageModal.addEventListener("click", (e) => {
+      if (e.target.classList.contains("close") || e.target === imageModal) {
+        imageModal.style.display = "none";
+      }
     });
   </script>
 </body>
