--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
   <div class="profile-gallery">
     <h1>캐릭터 선택</h1>
     <div class="profiles">
-      <img src="char1_profile.jpg" alt="캐릭터 1" data-gallery="gallery-char1">
-      <img src="char2_profile.jpg" alt="캐릭터 2" data-gallery="gallery-char2">
-      <img src="char3_profile.jpg" alt="캐릭터 3" data-gallery="gallery-char3">
-      <img src="char4_profile.jpg" alt="캐릭터 4" data-gallery="gallery-char4">
-      <img src="char5_profile.jpg" alt="캐릭터 5" data-gallery="gallery-char5">
+      <img src="https://ac-p1.namu.la/20230825sac/84134ee8f0956b513d9c4366e06515919d67a3b11275465343a2ee3264dc8f98.png?expires=1740559868&key=lDmk5O0qW6DlHvxNmFpq9g" alt="Antonio" data-gallery="gallery-char1">
+      <img src="char2_profile.jpg" alt="Ulloa" data-gallery="gallery-char2">
+      <img src="char3_profile.jpg" alt="Eva" data-gallery="gallery-char3">
+      <img src="char4_profile.jpg" alt="Eve" data-gallery="gallery-char4">
+      <img src="char5_profile.jpg" alt="Ui" data-gallery="gallery-char5">
     </div>
   </div>
   
